Fix meet the team cards on mobile view

--- a/src/components/pages/AboutUs/Team/team.scss
+++ b/src/components/pages/AboutUs/Team/team.scss
@@ -32,7 +32,7 @@
     margin-inline: 0.5rem;
     height: 252px;
     @media screen and (max-width: 767px) {
-      width:294px;
+      // width:294px;
     }
  
     * {
